hphp/test/zend/bad/ns_049.php
<?php
const FOO = 0;

var_dump(constant(__NAMESPACE__ . "\\FOO"));